<resources>
    <string name="app_name">Kaiser Sales</string>
    <string name="action_settings">Settings</string>
    <string name="version">1.6</string>
    <string name="custno">Customer NO:</string>
    <string name="term">Customer PO No:</string>
    <string name="slm">Salesman:</string>
    <string name="nm">Name:</string>
    <string name="slsOrd">Sales Order No:</string>
    <string name="shipad">Ship Address:</string>
    <string name="remk">Remarks:</string>
    <string name="save">ADD Item</string>
    <string name="sub">SUBMIT</string>
    <string name="cnl">CANCEL</string>
    <string name="nw">NEW</string>
    <string name="rcode">Reg Code</string>
    <string name="ccode">Company Code</string>
    <string name="ocode">Outlet Code</string>
    <string name="am">AMEND</string>
    <string name="cread"> Fail to connect, please check your credentials and try again.</string>
    <string name="aut_alert">Fields Missing</string>
    <string name="server">Server Configuration</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="suname">Server Username</string>
    <string name="spaswd">Server Password</string>
    <string name="_vieworder">View order</string>
    <string name="_promtiom">Promotion</string>
    <string name="_reload">Reload</string>
    <string name="netw">No network available please try again later.</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="encdq">&lt;?xml version=\&quot;1.0\&quot; encoding=\&quot;UTF-8\&quot;?&gt;&lt;plist version=\&quot;1.0\&quot;&gt;&lt;array&gt;</string>
    <string name="encdtaiq">&lt;/array&gt;&lt;/plist&gt;</string>
</resources>
